--- a/package.json
+++ b/package.json
@@ -13,13 +13,11 @@
     "@google/genai": "^1.39.0",
     "lucide-react": "^0.563.0",
     "react": "^19.2.4",
-    "react-dom": "^19.2.4"
-  },
-  "devDependencies": {
-    "@types/react": "^19.2.4",
-    "@types/react-dom": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "vite": "^6.1.0",
     "@vitejs/plugin-react": "^4.3.4",
     "typescript": "^5.7.3",
-    "vite": "^6.1.0"
+    "@types/react": "^19.2.4",
+    "@types/react-dom": "^19.2.4"
   }
 }
