--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@google/genai": "^1.39.0",
     "lucide-react": "^0.563.0",
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4",
-    "vite": "^6.1.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
+  },
+  "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
+    "vite": "^6.1.0",
     "typescript": "^5.7.3",
-    "@types/react": "^19.2.4",
-    "@types/react-dom": "^19.2.4"
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0"
   }
 }
